// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuantityChange Component Tests rendering Quantity On-Hands Change: Renders negative change in quantity 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "paddingRight": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#8492a8",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
    </Text>
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
        }
      }
    >
      30
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "paddingRight": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#8492a8",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.OH_CHANGE" translation]
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "alignSelf": "flex-start",
            "color": "#ab2703",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        <Icon
          allowFontScaling={false}
          name="arrow-down"
          size={20}
        />
        $100.00
      </Text>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
         | 
      </Text>
      <Text
        style={
          {
            "alignSelf": "flex-start",
            "color": "#ab2703",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        -20
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "borderTopColor": "#eeeeee",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "paddingRight": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      10
    </Text>
  </View>
</View>
`;

exports[`QuantityChange Component Tests rendering Quantity On-Hands Change: Renders no change arrow if oldOHQuantity and newOHQuantity are zero 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "paddingRight": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#8492a8",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
    </Text>
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
        }
      }
    >
      0
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "paddingRight": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#8492a8",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.OH_CHANGE" translation]
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "alignSelf": "center",
            "color": "#545F7A",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        $0.00
      </Text>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
         | 
      </Text>
      <Text
        style={
          {
            "alignSelf": "center",
            "color": "#545F7A",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        0
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "borderTopColor": "#eeeeee",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "paddingRight": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      0
    </Text>
  </View>
</View>
`;

exports[`QuantityChange Component Tests rendering Quantity On-Hands Change: Renders positive change in quantity 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "paddingRight": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#8492a8",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.CURRENT_QUANTITY" translation]
    </Text>
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
        }
      }
    >
      5
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 6,
        "paddingRight": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#8492a8",
          "fontSize": 14,
        }
      }
    >
      [missing "en.APPROVAL.OH_CHANGE" translation]
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "alignSelf": "flex-start",
            "color": "#33691E",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        <Icon
          allowFontScaling={false}
          name="arrow-up"
          size={20}
        />
        $200.00
      </Text>
      <Text
        style={
          {
            "color": "#616161",
            "fontSize": 16,
            "marginHorizontal": 4,
          }
        }
      >
         | 
      </Text>
      <Text
        style={
          {
            "alignSelf": "flex-start",
            "color": "#33691E",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        15
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "borderTopColor": "#eeeeee",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "paddingRight": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "alignSelf": "center",
          "color": "#545F7A",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      20
    </Text>
  </View>
</View>
`;
